Changed zoom in animation and fixed element header text clipping

--- a/app/_styles/animation.scss
+++ b/app/_styles/animation.scss
@@ -10,12 +10,17 @@
 }
 
 .transition-zoom-in{
-  transition: transform 0.5s ease;
+  transition: transform 0.4s ease-in;
+}
+
+.transition-zoom-out{
+  transition: transform 0.2s ease-out;
 }
 
 /** Transform elements **/
 .transform-scale:hover{
-  transform: scale(1.05);
+  @extend .transition-zoom-in;
+  transform: scale(1.1);
 }
 
 .transform-opacity:hover{
